Fri Feb 19 21:09:22 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Added support for asking the destination filename where
	  the downloaded file is saved in the file transfer.  Affected
	  files are lib/silccilent/silcclient.h, client_ftp.c.

Wed Feb 18 02:46:17 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Fixed error handling in resuming data processing.  Affected
	  files are lib/silcclient/client_resume.c and client.c.

Tue Feb 17 19:34:30 EET 2004  Pekka Riikonen <priikone@silcnet.org>

	* Fixed silc_client_send_private_message to return TRUE correctly.
	  Affected file lib/silcclient/client_prvmsg.c.

	* Added topic to the SilcChannelEntry.  Affected files are
	  lib/silcclient/silcclient.h, command_reply.c, client_notify.c.

Fri Feb 13 14:19:14 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Use conn->cmd_ident for all silc_client_command_call()s.  Affected
	  file lib/silcclient/command.c

Fri Feb 13 13:53:45 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* Convert all commands to UTF-8 before passing them to the
	  client library.  Still need to convert replies from UTF-8 to
	  the locale encoding.  Affected file
	  irssi/src/silc/core/silc-cmdqueue.c

Fri Feb 13 13:13:07 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* redirect all silc_client_command_calls through a queueing framework.
	  This fixes /CYCLE and the annoying "nick change after auto-joining
	  a channel".  Furthermore it defines one central point where
	  command parameters can be UTF-8-ified.  Affected files
	  irssi/src/silc/core/Makefile, client_ops.c, silc-channels.c,
	  silc-servers.[ch], silc-core.c, silc-cmdqueue.[ch], silc-lag.c

Fri Feb 13 12:04:41 CET 2004  Jochen Eisinger <jochen@penguin-breeder.org>

	* use asynchronous connect() to establish router connections.
	  Fixes problem when the primary router goes down.  Affected files
	  silcd/server.c, silcd/server_backup.c

Thu Feb 12 20:09:59 EET 2004  Pekka Riikonen <priikone@silcnet.org>